# daily-wallpaper

./: README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/sql/init/: migrations.sql
src-tauri/src/: commands.rs  lib.rs  main.rs  rest.rs  sedentary.rs  wallpaper.rs
src/components/: Dashboard.vue  Rest.vue  Sedentary.vue  Showcase.vue  TitleBar.vue  WallpaperCriteria.vue
src/modules/api/: index.ts
src/modules/criteria-form/: index.ts
src/modules/database/: index.ts
src/modules/theme-overrides/: index.ts
src/modules/wallpaper-changer/: index.ts
src/stores/: useCriteriaStore.ts  useMainStore.ts
src/types/: index.ts
