[package]
name = "DailyWallpaper"
version = "1.0.0"
description = "Make your wallpaper less boring."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "daily_wallpaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = "0.58.0"
tauri-plugin-store = "2"
reqwest = "0.12.9"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
wallpaper = "3.2.0"
device_query = "3.0.1"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-mp3"] }
winapi = { version = "0.3.9", features = ["windef", "wingdi", "libloaderapi", "errhandlingapi", "ntdef", "d2d1"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

